--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.1",
     "prettier": "^3.0.3",
+    "serve": "^14.2.4",
     "terser": "^5.24.0"
   },
   "dependencies": {
